--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,8 @@ dependencies {
     testRuntimeOnly "org.seleniumhq.selenium:selenium-chrome-driver:4.19.1"
     testRuntimeOnly "org.seleniumhq.selenium:selenium-firefox-driver:4.19.1"
     testRuntimeOnly "org.seleniumhq.selenium:selenium-safari-driver:4.19.1"
+
+    implementation "mysql:mysql-connector-java:8.0.28"
 }
 
 application {
