--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -51,24 +51,25 @@ grails:
     default:
       codec: html
 dataSource:
-  driverClassName: org.h2.Driver
-  username: sa
-  password: ''
   pooled: true
   jmxExport: true
+  driverClassName: com.mysql.cj.jdbc.Driver
+  username: admin
+  password: admin123
+  url: jdbc:mysql://localhost:3306/filmap_dev?useSSL=false&serverTimezone=UTC
 environments:
   development:
     dataSource:
-      dbCreate: create-drop
-      url: jdbc:h2:mem:devDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+      dbCreate: update
+      url: jdbc:mysql://localhost:3306/filmap_dev?useSSL=false&serverTimezone=UTC
   test:
     dataSource:
       dbCreate: update
-      url: jdbc:h2:mem:testDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+      url: jdbc:mysql://localhost:3306/filmap_dev?useSSL=false&serverTimezone=UTC
   production:
     dataSource:
       dbCreate: none
-      url: jdbc:h2:./prodDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+      url: jdbc:mysql://localhost:3306/filmap_dev?useSSL=false&serverTimezone=UTC
       properties:
         jmxEnabled: true
         initialSize: 5
