--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -54,22 +54,22 @@ dataSource:
   pooled: true
   jmxExport: true
   driverClassName: com.mysql.cj.jdbc.Driver
-  username: admin
-  password: admin123
-  url: jdbc:mysql://localhost:3306/filmap_dev?useSSL=false&serverTimezone=UTC
+  username: admin_film
+  password: admin_film_pass
+  url: jdbc:mysql://localhost:3306/filmdb?useSSL=false&serverTimezone=UTC
 environments:
   development:
     dataSource:
       dbCreate: update
-      url: jdbc:mysql://localhost:3306/filmap_dev?useSSL=false&serverTimezone=UTC
+      url: jdbc:mysql://localhost:3306/filmdb?useSSL=false&serverTimezone=UTC
   test:
     dataSource:
       dbCreate: update
-      url: jdbc:mysql://localhost:3306/filmap_dev?useSSL=false&serverTimezone=UTC
+      url: jdbc:mysql://localhost:3306/filmdb?useSSL=false&serverTimezone=UTC
   production:
     dataSource:
       dbCreate: none
-      url: jdbc:mysql://localhost:3306/filmap_dev?useSSL=false&serverTimezone=UTC
+      url: jdbc:mysql://localhost:3306/filmdb?useSSL=false&serverTimezone=UTC
       properties:
         jmxEnabled: true
         initialSize: 5
